added api, improved network method signatures, added api test

--- a/MarketCap/Info.plist
+++ b/MarketCap/Info.plist
@@ -32,5 +32,9 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
+	<key>ApiDomain</key>
+	<string>$(CMC_API_DOMAIN)</string>
+	<key>ApiVersion</key>
+	<string>$(CMC_API_VERSION)</string>
 </dict>
 </plist>
