switched to coingecko api, got rid of useless pods / keys

--- a/MarketCap/Info.plist
+++ b/MarketCap/Info.plist
@@ -32,9 +32,7 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
-	<key>ApiDomain</key>
-	<string>$(CMC_API_DOMAIN)</string>
-	<key>ApiVersion</key>
-	<string>$(CMC_API_VERSION)</string>
+	<key>ApiUrl</key>
+	<string>$(API_URL)</string>
 </dict>
 </plist>
